Increased bottom margin on input boxes - fixes #37 (misaligned forms)

--- a/checkmark/public/stylesheets/main.css
+++ b/checkmark/public/stylesheets/main.css
@@ -111,7 +111,7 @@ label {
 input { 
   background: #fff;
   border: 1px solid #D8D8D8;
-  margin: 2px 0 2px 0;
+  margin: 2px 0 5px 0;
   padding: 3px 5px 3px 5px;
 }
 
